# llm-periop-prediction

./: .gitignore  Postgres.md  README.md  pyenv_poetry_setup.sh  pyproject.toml  requirements.txt
analysis/: analysis_asa.py  analysis_hospital_admission.py  analysis_hospital_duration.py  analysis_hospital_mortality.py  analysis_icu_admission.py  analysis_icu_duration.py  analysis_pacu_duration.py  analysis_unplanned_admit.py  cost_estimation.py  figure_combined_results.py  figure_dataset_case_overlap.py  figure_duration_predictions.py  figure_prompt_strategies.py  figure_pvalues.py  generate_experiments.py  note_types.py  table1_dataset_demographics.py  table_bootstrap_confmat_metrics.py
analysis/results/asa/: baseline_boot_metrics.csv  f1.csv  f1_boot_mean_long.csv  f1_length_group_pvalues.csv  f1_prompt_pvalues.csv  mcc.csv  mcc_boot_mean_long.csv  mcc_length_group_pvalues.csv  mcc_prompt_pvalues.csv  mean_ci_all_prompts.csv  mean_ci_all_prompts_and_stratifications.csv
analysis/results/asa/boot_metrics/: 10shotCoTFromNotesSummaryAnswer-all.feather  10shotCoTFromNotesSummaryAnswer-long.feather  10shotCoTFromNotesSummaryAnswer-medium.feather  10shotCoTFromNotesSummaryAnswer-short.feather  10shotFromNotesSummaryAnswer-all.feather  10shotFromNotesSummaryAnswer-long.feather  10shotFromNotesSummaryAnswer-medium.feather  10shotFromNotesSummaryAnswer-short.feather  20shotCoTFromNotesSummaryAnswer-all.feather  20shotCoTFromNotesSummaryAnswer-long.feather  20shotCoTFromNotesSummaryAnswer-medium.feather  20shotCoTFromNotesSummaryAnswer-short.feather  20shotFromNotesSummaryAnswer-all.feather  20shotFromNotesSummaryAnswer-long.feather  20shotFromNotesSummaryAnswer-medium.feather  20shotFromNotesSummaryAnswer-short.feather  50shotCoTFromNotesSummaryAnswer-all.feather  50shotCoTFromNotesSummaryAnswer-long.feather  50shotCoTFromNotesSummaryAnswer-medium.feather  50shotCoTFromNotesSummaryAnswer-short.feather  50shotFromNotesSummaryAnswer-all.feather  50shotFromNotesSummaryAnswer-long.feather  50shotFromNotesSummaryAnswer-medium.feather  50shotFromNotesSummaryAnswer-short.feather  5shotCoTFromNotesSummaryAnswer-all.feather  5shotCoTFromNotesSummaryAnswer-long.feather  5shotCoTFromNotesSummaryAnswer-medium.feather  5shotCoTFromNotesSummaryAnswer-short.feather  5shotFromNotesSummaryAnswer-all.feather  5shotFromNotesSummaryAnswer-long.feather  5shotFromNotesSummaryAnswer-medium.feather  5shotFromNotesSummaryAnswer-short.feather  ZeroshotCoTFromNotesAnswer-all.feather  ZeroshotCoTFromNotesAnswer-long.feather  ZeroshotCoTFromNotesAnswer-medium.feather  ZeroshotCoTFromNotesAnswer-short.feather  ZeroshotCoTFromNotesSummaryAnswer-all.feather  (+11 more)
analysis/results/dataset_case_overlap/: fewshot_case_overlap.csv  inference_case_overlap.csv
analysis/results/hospital_admission/: baseline_boot_metrics.csv  f1.csv  f1_boot_mean_long.csv  f1_length_group_pvalues.csv  f1_prompt_pvalues.csv  mcc.csv  mcc_boot_mean_long.csv  mcc_length_group_pvalues.csv  mcc_prompt_pvalues.csv  mean_ci_all_prompts.csv  mean_ci_all_prompts_and_stratifications.csv
analysis/results/hospital_duration/: baseline_boot_metrics.csv  mae.csv  mae_boot_mean_long.csv  mae_length_group_pvalues.csv  mae_prompt_pvalues.csv  maxerror.csv  maxerror_boot_mean_long.csv  maxerror_length_group_pvalues.csv  maxerror_prompt_pvalues.csv  mean_ci_all_prompts.csv  mean_ci_all_prompts_and_stratifications.csv
analysis/results/hospital_mortality/: baseline_boot_metrics.csv  f1.csv  f1_boot_mean_long.csv  f1_length_group_pvalues.csv  f1_prompt_pvalues.csv  mcc.csv  mcc_boot_mean_long.csv  mcc_length_group_pvalues.csv  mcc_prompt_pvalues.csv  mean_ci_all_prompts.csv  mean_ci_all_prompts_and_stratifications.csv
analysis/results/icu_admission/: baseline_boot_metrics.csv  f1.csv  f1_boot_mean_long.csv  f1_length_group_pvalues.csv  f1_prompt_pvalues.csv  mcc.csv  mcc_boot_mean_long.csv  mcc_length_group_pvalues.csv  mcc_prompt_pvalues.csv  mean_ci_all_prompts.csv  mean_ci_all_prompts_and_stratifications.csv
analysis/results/icu_duration/: baseline_boot_metrics.csv  mae.csv  mae_boot_mean_long.csv  mae_length_group_pvalues.csv  mae_prompt_pvalues.csv  maxerror.csv  maxerror_boot_mean_long.csv  maxerror_length_group_pvalues.csv  maxerror_prompt_pvalues.csv  mean_ci_all_prompts.csv  mean_ci_all_prompts_and_stratifications.csv
analysis/results/note_types/: note_types.csv
analysis/results/phase1_duration/: baseline_boot_metrics.csv  mae.csv  mae_boot_mean_long.csv  mae_length_group_pvalues.csv  mae_prompt_pvalues.csv  maxerror.csv  maxerror_boot_mean_long.csv  maxerror_length_group_pvalues.csv  maxerror_prompt_pvalues.csv  mean_ci_all_prompts.csv  mean_ci_all_prompts_and_stratifications.csv
analysis/results/table1/: Table1.csv
analysis/results/unplanned_admit/: baseline_boot_metrics.csv  f1.csv  f1_boot_mean_long.csv  f1_length_group_pvalues.csv  f1_prompt_pvalues.csv  mcc.csv  mcc_boot_mean_long.csv  mcc_length_group_pvalues.csv  mcc_prompt_pvalues.csv  mean_ci_all_prompts.csv  mean_ci_all_prompts_and_stratifications.csv
data_query/: README.md  pyproject.toml
data_query/data_query/: export_sql.py
llm/: README.md  pyproject.toml
llm/llm/: database.py  experiment.py  format.py  metrics.py  plot.py  prompt_names.py  prompts.py  statistics.py
llm_utils/: README.md  pyproject.toml
llm_utils/llm_utils/: __init__.py  async_run.py  data_utils.py  datetime.py  file_paths.py  file_utils.py  parallel_process.py  progress_bar.py  prompt_utils.py  string_utils.py  tiktoken_utils.py
llm_utils/llm_utils/plots/: __init__.py  classification_plots.py  distribution_plots.py  regression_plots.py  token_length_plot.py
make_dataset/: README.md  pyproject.toml
make_dataset/make_dataset/: adt.py  case.py  encounter.py  pipeline.py
make_dataset/make_dataset/dataset/: __init__.py  builder.py  sampler.py
make_dataset/make_dataset/notes/: __init__.py  last10_note.py  note.py  preanes_note.py
make_dataset/scripts/: create_dataset.ipynb  create_dataset.py  download_data.py  mini_dataset.py
make_dataset/tests/: test_note.py
scripts/: generate.py
(+361 files in other folders)
