[tool.poetry]
name = "llm-asa-los"
version = "0.3.0"
description = "ASA-PS and Length-of-Stay Prediction using Large Language Models"
authors = ["Philip Chung <philip.f.chung@gmail.com>"]
readme = "README.md"
packages = [{include = "make_dataset"}, {include = "data_query"}, {include = "llm"}, {include = "llm_utils"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pip = "^23.0.1"
pandas = "^1.5.3"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
jupyter = "^1.0.0"
tqdm = "^4.64.1"
ipywidgets = "^8.0.4"
ipykernel = "^6.22.0"
pyarrow = "^11.0.0"
scipy = "^1.10.1"
zstd = "^1.5.4.1"
make_dataset = {path = "make_dataset", develop = true}
data_query = {path = "data_query", develop = true}
llm = {path = "llm", develop = true}
llm_utils = {path = "llm_utils", develop = true}
openai = "^1.0.0"
tiktoken = "^0.3.3"
pydantic = "^2.0.0"
scikit-learn = "^1.2.2"
statsmodels = "^0.14.0"
sqlalchemy = "^2.0.20"
psycopg2 = "^2.9.7"
tenacity = "^8.2.3"
typing-extensions = "^4.8.0"
sentence-transformers = "^2.2.2"
typer = {extras = ["all"], version = "^0.9.0"}
rich = "^13.6.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.265"
mypy = "^1.2.0"
pytest-cov = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 100

[tool.ruff]
ignore = []
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
# Same as Black.
line-length = 100
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
# Assume Python 3.10.
target-version = "py310"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
pretty = true
color_output = true
show_column_numbers = true
show_error_context = true
show_error_codes = true
ignore_missing_imports = true
follow_imports = "normal"
# Warnings
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
# Additional Checks
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
# Make sure we are using MyPy
disallow_untyped_calls = true
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--import-mode=importlib",
]
pythonpath=["."]
testpaths = [
    "tests",
    "llm",
    "make_dataset",
    "data_query",
]